[package]
name = "par_seq"
version = "0.1.0"
edition = "2021"
authors = ["Ugo Varetto"]
description = "Parallel access to sequences"
license = "MIT"
homepage = "https://github.com/uv-rust/par_seq"
repoository = "https://github.com/uv-rust/par_seq"
readme = "Readme.md"
categories = ['concurrency']
keywords = ["concurrency", "parallel"]
